vinh/optimize clean code